@@ -1,8 +1,9 @@
 #!/bin/sh
 VERSION=2.0.0.`tr -d '\012' < build-number.txt`
 #SERVERLIST="vasx86.vintela.com vasx8664.vintela.com vassol8.vintela.com vashpux.vintela.com vashpuxia64.vintela.com 10.4.23.115 vasaix51.vintela.com vasaix53.vintela.com"
-SERVERLIST="vasx86.vintela.com vasx8664.vintela.com vassol8.vintela.com vashpuxia64.vintela.com vashpux.vintela.com 10.4.23.115"
-#SERVERLIST="vashpuxia64.vintela.com" 
+SERVERLIST="vasx86.vintela.com vasx8664.vintela.com vassol8.vintela.com vashpux.vintela.com vashpuxia64.vintela.com 10.4.23.115 vasaix53.vintela.com"
+#SERVERLIST="vasx86.vintela.com vasx8664.vintela.com vassol8.vintela.com vashpuxia64.vintela.com vashpux.vintela.com 10.4.23.115"
+#SERVERLIST="vasaix53.vintela.com"
 
 server_test()
 {
@@ -31,9 +32,22 @@ server_clean()
     fi        
 }
     
-server_run()
+server_build()
 {
-    ssh $1 "export PATH=/opt/hp-gcc/bin:/opt/quest/bin:/usr/local/pa20_32/bin:/usr/local/bin:/usr/contrib/bin:/usr/local:\$PATH; rm -rf DB2_sys-auth/ ; gunzip DB2_sys-auth_src.$VERSION.tar.gz && tar xf DB2_sys-auth_src.$VERSION.tar && cd DB2_sys-auth/ && ./configure && make bin_dist && mv DB2_sys-auth_*.$VERSION.tar.gz ../" >/dev/null 2>&1
+    ssh $1 "export PATH=/opt/hp-gcc/bin:/opt/quest/bin:/usr/local/pa20_32/bin:/usr/local/bin:/usr/contrib/bin:/usr/local:\$PATH; rm -rf DB2_sys-auth/ ; gunzip DB2_sys-auth_src.$VERSION.tar.gz && tar xf DB2_sys-auth_src.$VERSION.tar && cd DB2_sys-auth/ && ./configure && make bin_dist && mv DB2_sys-auth_*.$VERSION.tar.gz ../"
+    if [ $? -ne 0 ] ; then
+        echo "Server: <$server> failed on run."
+        echo $server >> ./failed
+    fi        
+}
+    
+server_build_test_clean()
+{
+    if [ "$1" = "10.4.23.115" ] ; then
+        ssh $1 "rm -rf DB2_sys-auth/ DB2_sys-auth_src.$VERSION.tar.gz DB2_sys-auth_src.$VERSION.tar DB2_sys-auth_*.$VERSION.tar.gz"
+    else
+        ssh $1 "export PATH=/opt/hp-gcc/bin:/opt/quest/bin:/usr/local/pa20_32/bin:/usr/local/bin:/usr/contrib/bin:/usr/local:\$PATH; cd DB2_sys-auth/ && make check && cd ../ && rm -rf DB2_sys-auth/ DB2_sys-auth_src.$VERSION.tar.gz DB2_sys-auth_src.$VERSION.tar DB2_sys-auth_*.$VERSION.tar.gz"
+    fi
     if [ $? -ne 0 ] ; then
         echo "Server: <$server> failed on run."
         echo $server >> ./failed
@@ -63,7 +77,7 @@ loop ()
     echo "<$1> Begin"
     rm -rf ./failed
     for server in $SERVERLIST ; do
-        $1 $server &
+        $1 $server >> out.$server 2>&1 &
     done
 
     wait
@@ -83,6 +97,8 @@ make distclean 2>/dev/null 1>&2
 ./configure 2>/dev/null 1>&2
 
 make src_dist  2>/dev/null 1>&2
+
+rm -rf out.*
 echo "<setup> End"
 echo
 
@@ -92,7 +108,7 @@ loop server_copy
 
 ./test_reset.sh >/dev/null
 
-loop server_run
+loop server_build
 
 rm -rf binaries/
 
@@ -102,6 +118,7 @@ cp DB2_sys-auth_src.$VERSION.tar.gz binaries/
 
 loop server_gather
 
-loop server_clean
+loop server_build_test_clean
 
 make distclean
+rm -rf out.*
